--- a/roles/cluster_config/tasks/main.yml
+++ b/roles/cluster_config/tasks/main.yml
@@ -5,6 +5,11 @@
 # - provide explicit empty value ("" or [] or {}) for given configuration entry
 # - or call corresponding plugin with state=absent
 
+- name: Set cluster name
+  scale_computing.hypercore.cluster_name:
+    name_new: "{{ scale_computing_hypercore_cluster_config.name }}"
+  when: scale_computing_hypercore_cluster_config.name | default(False)
+
 - name: Set DNS configuration
   scale_computing.hypercore.dns_config:
     dns_servers: "{{ scale_computing_hypercore_cluster_config.dns.server_ips | default(omit) }}"
