--- a/tests/integration/targets/role_cluster_config/tasks/main.yml
+++ b/tests/integration/targets/role_cluster_config/tasks/main.yml
@@ -134,7 +134,8 @@
       vars:
         dbg_suffix: "cluster_config_empty - a"
         cluster_config_applied: "{{ cluster_config_empty }}"
-        cluster_config_expected: "{{ cluster_config_empty }}"
+        # we expect old configuration (cluster_config_a) to be partially replaced by empty values from cluster_config_empty
+        cluster_config_expected: "{{ cluster_config_a | combine(cluster_config_empty) }}"
 
     # ====================================================================================
     # -----------------------------------------------------------------
