--- a/tests/integration/targets/role_cluster_config/tasks/apply_and_test.yml
+++ b/tests/integration/targets/role_cluster_config/tasks/apply_and_test.yml
@@ -24,6 +24,10 @@
   scale_computing.hypercore.oidc_config_info:
   register: oidc_config_info_result
 
+- name: Retrieve time_server - {{ dbg_suffix }}
+  scale_computing.hypercore.time_server_info:
+  register: time_server_info_result
+
 - name: Check state - {{ dbg_suffix }}
   ansible.builtin.assert:
     that:
@@ -37,3 +41,4 @@
       - oidc_config_info_result.record.client_id == cluster_config_expected.oidc.client_id
       - oidc_config_info_result.record.config_url == cluster_config_expected.oidc.config_url
       - oidc_config_info_result.record.scopes == cluster_config_expected.oidc.scopes
+      - time_server_info_result.record.host == cluster_config_expected.time_server
