CI skip role cluster_config integration test by default
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -16,16 +16,17 @@ on:
       # git_issues - slow, do not run on each push. TODO - run them only once a day
       # oidc_config - during reconfiguration API returns 500/502 errors for other requests
       # smtp - email_alert test requires a configured SMTP
+      # role_ - role cluster_config reconfigures DNS, SMTP, OIDC.
       integ_tests_exclude:
         type: string
         description: |-
           List integration tests to exclude.
           Use "*" to exclude all tests.
           Use regex like 'node|^git_issue|^dns_config$' to exclude only a subset.
-        default: "^dns_config$|^cluster_shutdown$|^oidc_config$|^smtp$"
+        default: "^dns_config$|^cluster_shutdown$|^oidc_config$|^smtp$|^role_"
 env:
   INTEG_TESTS_INCLUDE_SCHEDULE: "*"
-  INTEG_TESTS_EXCLUDE_SCHEDULE: "^dns_config$|^cluster_shutdown$|^oidc_config$|^smtp$"
+  INTEG_TESTS_EXCLUDE_SCHEDULE: "^dns_config$|^cluster_shutdown$|^oidc_config$|^smtp$|^role_"
   WORKDIR: /work-dir/ansible_collections/scale_computing/hypercore
 # Run only one workflow for specific branch.
 concurrency:
