--- a/tests/integration/targets/email_alert/tasks/01_email_alert_info.yml
+++ b/tests/integration/targets/email_alert/tasks/01_email_alert_info.yml
@@ -8,9 +8,11 @@
     - name: Retrieve info about Email alert recipients
       scale_computing.hypercore.email_alert_info:
       register: emails
+    - ansible.builtin.debug:
+        var: emails
     - ansible.builtin.assert:
         that:
           - emails.records != []
           - emails.records[0].keys() | sort ==
-            ['alert_tag_uuid', 'email_address', 'latest_task_tag',
+            ['alert_tag_uuid', 'email', 'latest_task_tag',
             'resend_delay', 'silent_period', 'uuid']
